--- a/_workspacepage.scss
+++ b/_workspacepage.scss
@@ -301,6 +301,7 @@
             }
 
             .compare-section {
+                position: relative;
                 .top_banner_spaceTitle {
                     font-size: 30px;
                     line-height: 50px;
@@ -316,7 +317,10 @@
                     -webkit-box-direction: reverse;
                     -ms-flex-direction: column-reverse;
                     flex-direction: column-reverse;
-
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    
                     h2 {
                         font-size: 30px;
                         line-height: 50px;
@@ -351,7 +355,9 @@
 
                 .table {
                     margin-bottom: 40px;
-
+                    max-width: 970px;
+                    width: 100%;
+                    margin-left: auto;
                     thead {
                         tr {
                             th {
