--- a/style.css
+++ b/style.css
@@ -2754,6 +2754,10 @@ section {
   font-size: 14px;
 }
 
+.workspacepage .contents .tab-content .compare-section {
+  position: relative;
+}
+
 .workspacepage .contents .tab-content .compare-section .top_banner_spaceTitle {
   font-size: 30px;
   line-height: 50px;
@@ -2769,6 +2773,9 @@ section {
   -webkit-box-direction: reverse;
   -ms-flex-direction: column-reverse;
   flex-direction: column-reverse;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .workspacepage .contents .tab-content .compare-section .top_banner_spaceTitle h2 {
@@ -2804,6 +2811,9 @@ section {
 
 .workspacepage .contents .tab-content .compare-section .table {
   margin-bottom: 40px;
+  max-width: 970px;
+  width: 100%;
+  margin-left: auto;
 }
 
 .workspacepage .contents .tab-content .compare-section .table thead tr th {
