--- a/style.css
+++ b/style.css
@@ -2460,6 +2460,74 @@ section {
   }
 }
 
+.allnews .one-post {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top: 1px solid #f4f4f5;
+  border-bottom: 1px solid #f4f4f5;
+  padding: 18px;
+}
+
+.allnews .one-post a {
+  color: #212426;
+}
+
+.allnews .one-post a:hover {
+  color: #2ca6e0;
+  text-decoration: none;
+}
+
+.allnews .one-post p {
+  font-family: Ubuntu;
+  font-size: 14px;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.57;
+  letter-spacing: 0.8px;
+}
+
+.allnews .one-post .post-category {
+  margin: 0 20px;
+  font-family: NotoSansTC;
+  font-size: 12px;
+  font-weight: 500;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.8px;
+  text-align: center;
+  border-radius: 30.5px;
+  background-color: #2ca6e0;
+}
+
+.allnews .one-post .post-category a {
+  color: #ffffff;
+  padding: 1px 15px;
+}
+
+.allnews .one-post .post-infomation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (max-width: 767.98px) {
+  .allnews {
+    padding: 0 39px;
+  }
+  .allnews .one-post {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .allnews .post-infomation {
+    padding: 10px 0 0 0;
+  }
+}
+
 .workspacepage {
   max-width: 1440px;
   margin: 0 auto;
