--- a/style.css
+++ b/style.css
@@ -2461,11 +2461,69 @@ section {
 }
 
 .servicepage .contents {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0 15px;
   letter-spacing: 0.8px;
   line-height: 22px;
 }
 
-.servicepage .contents .link-btn {
+.servicepage .contents .tab .nav-tabs {
+  border: unset;
+}
+
+.servicepage .contents .tab .nav-tabs .nav-item {
+  position: relative;
+  width: 170px;
+  text-align: center;
+}
+
+.servicepage .contents .tab .nav-tabs .nav-item .nav-link {
+  border: none;
+  padding: 0;
+}
+
+.servicepage .contents .tab .nav-tabs .nav-item .active {
+  background-color: unset;
+}
+
+.servicepage .contents .nav-item::before {
+  content: '    ';
+  display: block;
+  width: 1px;
+  height: 30px;
+  background-color: #c7c7cb;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.servicepage .contents .nav-item:last-child::after {
+  content: '';
+  display: block;
+  width: 1px;
+  height: 30px;
+  background-color: #c7c7cb;
+  margin-left: 100%;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
+.servicepage .contents .support-wrap .about {
+  padding-top: 60px;
+  padding-bottom: 30px;
+  width: 70%;
+}
+
+.servicepage .contents .support-wrap .about p {
+  font-size: 14px;
+  color: #212426;
+}
+
+.servicepage .contents .support-wrap .link-btn {
   font-size: 16px;
   border: solid 2px #2ca6e0;
   color: #2ca6e0;
@@ -2473,135 +2531,249 @@ section {
   border-radius: 22px;
 }
 
-.servicepage .contents .link-btn .link-img {
+.servicepage .contents .support-wrap .link-btn .link-img {
   width: 29px;
   height: auto;
   margin-left: 30px;
 }
 
-.servicepage .contents .tav .nav-pills {
-  background-color: #ffffff;
-}
-
-.servicepage .contents .tav .nav-pills .nav-item .nav-link {
-  background-color: #ffffff;
-}
-
-.servicepage .contents .about {
-  padding-top: 60px;
-  padding-bottom: 30px;
-  width: 770px;
-}
-
-.servicepage .contents .about p {
-  font-size: 14px;
-  color: #212426;
-}
-
-.servicepage .contents .cards-wrap {
-  padding-top: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.servicepage .contents .cards-wrap .card {
+.servicepage .contents .support-wrap .cards-wrap .card {
+  margin-top: 100px;
   border: none;
-  width: 270px;
   height: auto;
   position: relative;
 }
 
-.servicepage .contents .cards-wrap .card .card-img-top {
-  width: 270px;
-  height: 171px;
+.servicepage .contents .support-wrap .cards-wrap .card .card-img-top {
+  max-width: 100%;
+  height: auto;
 }
 
-.servicepage .contents .cards-wrap .card .card-body {
+.servicepage .contents .support-wrap .cards-wrap .card .card-body {
   padding: 20px 0 100px 0;
 }
 
-.servicepage .contents .cards-wrap .card .card-body .card-title {
+.servicepage .contents .support-wrap .cards-wrap .card .card-body .card-title {
   font-size: 18px;
   font-weight: bold;
   letter-spacing: 1.2px;
 }
 
-.servicepage .contents .cards-wrap .card .card-body .card-text {
+.servicepage .contents .support-wrap .cards-wrap .card .card-body .card-text {
   font-size: 14px;
   text-indent: 1em;
 }
 
-.servicepage .contents .cards-wrap .card .card-body .card-link {
+.servicepage .contents .support-wrap .cards-wrap .card .card-body .card-link {
   display: block;
   margin-top: 60px;
   position: absolute;
   bottom: 0;
 }
 
-.servicepage .contents .carousel {
+.servicepage .contents .support-wrap .carousel {
+  margin: 0 calc(50% - 50vw);
   margin-top: 100px;
   margin-bottom: 154px;
 }
 
-.servicepage .contents .carousel .carousel-inner {
+.servicepage .contents .support-wrap .carousel .carousel-inner {
   background-color: #f7f7f7;
   position: relative;
 }
 
-.servicepage .contents .carousel .carousel-inner .backgroud-text {
+.servicepage .contents .support-wrap .carousel .carousel-inner .backgroud-text {
   font-size: 100px;
   font-weight: bold;
   position: absolute;
-  color: #ffffff;
   bottom: 46px;
   right: 129px;
+  z-index: 1;
+  color: #ffffff;
 }
 
-.servicepage .contents .carousel .carousel-inner .carousel-item .slide-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item {
+  z-index: 10;
+}
+
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content {
   padding: 60px 0;
   margin: 0 auto;
-  width: 770px;
-  z-index: -1;
+  width: 80%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: 1fr 80px;
+      grid-template-rows: 1fr 80px;
+  -ms-grid-columns: 30% 70%;
+      grid-template-columns: 30% 70%;
+      grid-template-areas: "area1 area2" "area3 area4";
 }
 
-.servicepage .contents .carousel .carousel-inner .carousel-item .slide-content .about-user img {
-  width: 100px;
-  height: 100px;
-  margin-bottom: 40px;
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .user-img {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: area1;
 }
 
-.servicepage .contents .carousel .carousel-inner .carousel-item .slide-content .about-user p {
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .user-name {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: area3;
+  padding-top: 40px;
   font-size: 16px;
   font-weight: bold;
-  color: #212426;
 }
 
-.servicepage .contents .carousel .carousel-inner .carousel-item .slide-content .comment-text {
-  padding-left: 68px;
-  width: 600px;
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .about-user {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: area2;
 }
 
-.servicepage .contents .carousel .carousel-inner .carousel-item .slide-content .comment-text h5 {
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .about-user .belong {
   font-size: 18px;
   font-weight: bold;
 }
 
-.servicepage .contents .carousel .carousel-inner .carousel-item .slide-content .comment-text .category {
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .about-user .category {
   font-size: 14px;
   color: #95959a;
 }
 
-.servicepage .contents .carousel .carousel-inner .carousel-item .slide-content .comment-text .support-detail {
-  color: #212426;
+.servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .support-detail {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: area4;
   font-size: 14px;
-  padding-top: 67px;
+  padding-top: 25px;
+}
+
+.servicepage .contents .container-fluid {
+  padding: 0;
+}
+
+@media screen and (max-width: 767.98px) {
+  .servicepage .tab .nav-tabs .nav-item {
+    width: 25%;
+  }
+  .servicepage .contents {
+    padding: 0 5%;
+  }
+  .servicepage .contents .support-wrap .about {
+    width: 100%;
+    padding-bottom: 0;
+    margin-bottom: 30px;
+  }
+  .servicepage .contents .support-wrap .cards-wrap {
+    padding-top: 60px;
+  }
+  .servicepage .contents .support-wrap .cards-wrap .card {
+    margin-bottom: 60px;
+  }
+  .servicepage .contents .support-wrap .carousel {
+    margin-top: 20px;
+    margin-bottom: 110px;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .backgroud-text {
+    font-size: 80px;
+    right: 23px;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item {
+    z-index: 10;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content {
+    -ms-grid-rows: 1fr 1fr 80px;
+        grid-template-rows: 1fr 1fr 80px;
+    -ms-grid-columns: 30% 70%;
+        grid-template-columns: 30% 70%;
+        grid-template-areas: "area1 area2" "area1 area3" "area4 area4";
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .user-img {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 2;
+    -ms-grid-column: 1;
+    grid-area: area1;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .about-user {
+    -ms-grid-row: 2;
+    -ms-grid-column: 2;
+    grid-area: area3;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .user-name {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
+    grid-area: area2;
+    padding: 0;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .support-detail {
+    -ms-grid-row: 3;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-area: area4;
+  }
+}
+
+@media screen and (max-width: 575.98px) {
+  .servicepage .contents .tab {
+    width: 100vw;
+    font-size: 14px;
+  }
+  .servicepage .contents .tab .nav-tabs .nav-item {
+    width: 30%;
+  }
+  .servicepage .contents .tab .nav-tabs .nav-item .nav-link {
+    display: inline;
+  }
+  .servicepage .contents .support-wrap .link-btn {
+    font-size: 12px;
+  }
+  .servicepage .contents .support-wrap .cards-wrap .card {
+    margin-top: 40px;
+    margin-bottom: 0;
+  }
+  .servicepage .contents .support-wrap .cards-wrap .card .card-body .card-title {
+    font-size: 16px;
+  }
+  .servicepage .contents .support-wrap .carousel {
+    margin-top: 80px;
+    margin-bottom: 80px;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .backgroud-text {
+    font-size: 60px;
+    margin: 0 auto;
+    width: 80%;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .user-img {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .user-name {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .about-user {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .about-user .belong {
+    font-size: 16px;
+  }
+  .servicepage .contents .support-wrap .carousel .carousel-inner .carousel-item .slide-content .support-detail {
+    width: 100%;
+    margin: 0 auto;
+    text-align: justify;
+  }
+}
+
+.btn-secondary {
+  border-color: #e8e8e8;
+  background-color: #ffffff;
+  color: #3f4144;
 }
 
 #arrow_top {
