--- a/_servicepage.scss
+++ b/_servicepage.scss
@@ -1,4 +1,39 @@
 .servicepage{
+    .top_banner {
+        max-width: 1305px;
+        width: 100%;
+        height: 327px;
+        position: relative;
+        margin-left: 135px;
+        img {
+            max-width: 100%;
+            width: 100%;
+            height: auto;
+        }
+        .top_banner_spaceTitle {
+            position: absolute;
+            left: 0px;
+            top: 35px;
+            h2 {
+                font-size: 30px;
+                line-height: 50px;
+                letter-spacing: 2.5px;
+                color: #212426;
+                writing-mode: vertical-rl;
+                display: flex;
+                flex-direction: column-reverse;
+                &::before {
+                    content: 'Co-Working Space';
+                    font-size: 14px;
+                    color: #2ca6e0;
+                    letter-spacing: .8px;
+                    transform: rotate(-180deg);
+                    writing-mode: vertical-rl;
+                    line-height: 20px;
+                }
+            }
+        }
+    }
     .contents{
         box-sizing: border-box;
         padding: 0 15px;
