--- a/_servicepage.scss
+++ b/_servicepage.scss
@@ -4,11 +4,16 @@
         width: 100%;
         height: 327px;
         position: relative;
-        margin-left: 135px;
-        img {
+        // margin-left: 200px;
+        box-sizing: border-box;
+        .top_banner_img_pc {
             max-width: 100%;
+            box-sizing: border-box;
             width: 100%;
             height: auto;
+        }
+        .top_banner_img_tb,.top_banner_img_sp{
+            display: none;
         }
         .top_banner_spaceTitle {
             position: absolute;
@@ -23,8 +28,9 @@
                 display: flex;
                 flex-direction: column-reverse;
                 &::before {
-                    content: 'Co-Working Space';
+                    content: 'Services';
                     font-size: 14px;
+                    text-align: right;
                     color: #2ca6e0;
                     letter-spacing: .8px;
                     transform: rotate(-180deg);
@@ -203,6 +209,10 @@
 @media screen and (max-width:767.98px){
     
     .servicepage{
+
+        // .top_banner{
+
+        // }
         .tab{
             .nav-tabs{
                 .nav-item{
