--- a/style.css
+++ b/style.css
@@ -2465,13 +2465,20 @@ section {
   width: 100%;
   height: 327px;
   position: relative;
-  margin-left: 135px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-.servicepage .top_banner img {
+.servicepage .top_banner .top_banner_img_pc {
   max-width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 100%;
   height: auto;
+}
+
+.servicepage .top_banner .top_banner_img_tb, .servicepage .top_banner .top_banner_img_sp {
+  display: none;
 }
 
 .servicepage .top_banner .top_banner_spaceTitle {
@@ -2498,8 +2505,9 @@ section {
 }
 
 .servicepage .top_banner .top_banner_spaceTitle h2::before {
-  content: 'Co-Working Space';
+  content: 'Services';
   font-size: 14px;
+  text-align: right;
   color: #2ca6e0;
   letter-spacing: .8px;
   -webkit-transform: rotate(-180deg);
