--- a/_servicepage.scss
+++ b/_servicepage.scss
@@ -1,24 +1,30 @@
 .servicepage{
+    
     .top_banner {
         max-width: 1305px;
         width: 100%;
         height: 327px;
         position: relative;
-        // margin-left: 200px;
+        padding-left: 5%;
+        margin: 0 0 0 auto;
         box-sizing: border-box;
+        
         .top_banner_img_pc {
             max-width: 100%;
             box-sizing: border-box;
             width: 100%;
             height: auto;
         }
+        
         .top_banner_img_tb,.top_banner_img_sp{
             display: none;
         }
+        
         .top_banner_spaceTitle {
             position: absolute;
-            left: 0px;
+            left: 5%;
             top: 35px;
+            
             h2 {
                 font-size: 30px;
                 line-height: 50px;
@@ -40,28 +46,35 @@
             }
         }
     }
+    
     .contents{
         box-sizing: border-box;
-        padding: 0 15px;
+        padding: 0 5%;
         letter-spacing: 0.8px;
         line-height: 22px;
+        
         .tab{
+            
             .nav-tabs{
                 border: unset;
+                
                 .nav-item{
                     position: relative;
                     width: 170px;
                     text-align: center;
+                    
                     .nav-link{
                         border: none;
                         padding: 0;
                     }
+                    
                     .active{
                         background-color: unset;
                     }
                 }
             }
         }
+        
         .nav-item::before{
             content: '    ';
             display: block;
@@ -73,6 +86,7 @@
             top: 50%;
             transform: translateY(-50%);
         }
+        
         .nav-item:last-child::after{
             content: '';
             display: block;
@@ -84,11 +98,14 @@
             top: 50%;
             transform: translateY(-50%);
         }
+        
         .support-wrap{
+            
             .about{
                 padding-top: 60px;
                 padding-bottom: 30px;
                 width: 70%;
+                
                 p{
                     font-size: 14px;
                     color: #212426;
@@ -101,6 +118,7 @@
                 color: #2ca6e0;
                 padding: 10px 37px 10px 25px;
                 border-radius: 22px;
+                
                 .link-img{
                     width: 29px;
                     height: auto;
@@ -109,26 +127,32 @@
             }
             
             .cards-wrap{
+                
                 .card{
                     margin-top: 100px;
                     border: none;
                     height: auto;
                     position: relative;
+                    
                     .card-img-top{
                         max-width: 100%;
                         height: auto;
                     }
+                    
                     .card-body{
                         padding: 20px 0 100px 0;
+                        
                         .card-title{
                             font-size: 18px;
                             font-weight: bold;
                             letter-spacing: 1.2px;
                         }
+                        
                         .card-text{
                             font-size: 14px;
                             text-indent: 1em;
                         }
+                        
                         .card-link{
                             display: block;
                             margin-top: 60px;
@@ -143,9 +167,11 @@
                 margin: 0 calc(50% - 50vw);
                 margin-top: 100px;
                 margin-bottom: 154px;
+                
                 .carousel-inner{
                     background-color: #f7f7f7;
                     position: relative;
+                    
                     .backgroud-text{
                         font-size: 100px;
                         font-weight: bold;
@@ -158,6 +184,7 @@
                     
                     .carousel-item{
                         z-index: 10;
+                        
                         .slide-content{
                             padding: 60px 0;
                             margin: 0 auto;
@@ -168,26 +195,32 @@
                             grid-template-areas: 
                             "area1 area2"
                             "area3 area4";
+                            
                             .user-img{
                                 grid-area: area1;
                             }
+                            
                             .user-name{
                                 grid-area: area3;
                                 padding-top: 40px;
                                 font-size: 16px;
                                 font-weight: bold;
                             }
+                            
                             .about-user{
                                 grid-area: area2;
+                                
                                 .belong{
                                     font-size: 18px;
                                     font-weight: bold;
                                 }
+                                
                                 .category{
                                     font-size: 14px;
                                     color: #95959a;
                                 }
                             }
+                            
                             .support-detail{
                                 grid-area: area4;
                                 font-size: 14px;
@@ -198,6 +231,7 @@
                 }
             }
         }
+        
         .container-fluid{
             padding: 0;
         }
@@ -209,41 +243,66 @@
 @media screen and (max-width:767.98px){
     
     .servicepage{
-
-        // .top_banner{
-
-        // }
+        
+        .top_banner {
+            max-width: 729px;
+            width: 100%;
+            height: 249px;
+            margin: 0 0 0 auto;
+            
+            .top_banner_img_pc {
+                display: none;
+            }
+            
+            .top_banner_img_sp {
+                display: block;
+                width: 100%;
+            }
+        }
+        
         .tab{
+            
             .nav-tabs{
+                
                 .nav-item{
                     width: 25%;
                 }
             }
         }
+        
         .contents{
             padding: 0 5%;
+            
             .support-wrap{
+                
                 .about{
                     width: 100%;
                     padding-bottom: 0;
                     margin-bottom: 30px;
                 }
+                
                 .cards-wrap{
                     padding-top: 60px;
+                    
                     .card{
                         margin-bottom: 60px;
                     }
                 }
+                
                 .carousel{
                     margin-top: 20px;
                     margin-bottom: 110px;
+                    
                     .carousel-inner{
+                        
                         .backgroud-text{
                             font-size: 80px;
                             right: 23px;
                         }
+                        
                         .carousel-item{
                             z-index: 10;
+                            
                             .slide-content{
                                 grid-template-rows: 1fr 1fr 80px;
                                 grid-template-columns: 30% 70%;
@@ -251,16 +310,20 @@
                                 "area1 area2"
                                 "area1 area3"
                                 "area4 area4";
+                                
                                 .user-img{
                                     grid-area: area1;
                                 }
+                                
                                 .about-user{
                                     grid-area: area3;
                                 }
+                                
                                 .user-name{
                                     grid-area: area2;
                                     padding: 0;
                                 }
+                                
                                 .support-detail{
                                     grid-area: area4;
                                 }
@@ -274,14 +337,55 @@
 }
 
 @media screen and (max-width: 575.98px){
+    
     .servicepage{
+        
+        .top_banner {
+            margin-left: 0;
+            margin-bottom: 14px;
+            height: auto;
+            
+            .top_banner_img_tb {
+                display: none;
+            }
+            
+            .top_banner_spaceTitle {
+                left: 15px;
+                top: 30px;
+                
+                h2 {
+                    font-size: 18px;
+                    line-height: 20px;
+                    -webkit-writing-mode: horizontal-tb;
+                    -ms-writing-mode: lr-tb;
+                    writing-mode: horizontal-tb;
+                    text-align: left;
+                    font-weight: bold;
+                    
+                    &::before {
+                        font-size: 12px;
+                        -webkit-writing-mode: horizontal-tb;
+                        -ms-writing-mode: lr-tb;
+                        writing-mode: horizontal-tb;
+                        -webkit-transform: inherit;
+                        transform: inherit;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+        
         .contents{
+            
             .tab{
                 width: 100vw;
                 font-size: 14px;
+                
                 .nav-tabs{
+                    
                     .nav-item{
                         width: 30%;
+                        
                         .nav-link{
                             display: inline;
                         }
@@ -289,49 +393,64 @@
                 }
             }
             .support-wrap{
+                
                 .link-btn{
                     font-size: 12px;
                 }
+                
                 .cards-wrap{
+                    
                     .card{
                         margin-top: 40px;
                         margin-bottom: 0;
+                        
                         .card-body{
+                            
                             .card-title{
                                 font-size: 16px;
                             }
                         }
                     }
                 }
+                
                 .carousel{
                     margin-top: 80px;
                     margin-bottom: 80px;
+                    
                     .carousel-inner{
+                        
                         .backgroud-text{
                             font-size: 60px;
                             margin: 0 auto;
                             width: 80%;
                         }
+                        
                         .carousel-item{
+                            
                             .slide-content{
                                 display: block;
                                 margin: 0 auto;
                                 text-align: center;
+                                
                                 .user-img{
                                     width: 80%;
                                     margin: 0 auto;
                                 }
+                                
                                 .user-name{
                                     width: 80%;
                                     margin: 0 auto;
                                 }
+                                
                                 .about-user{
                                     width: 80%;
                                     margin: 0 auto;
+                                    
                                     .belong{
                                         font-size: 16px;
                                     }
                                 }
+                                
                                 .support-detail{
                                     width: 100%;
                                     margin: 0 auto;
@@ -344,9 +463,4 @@
             }
         }
     }
-}
-.btn-secondary{
-    border-color: #e8e8e8;
-    background-color: #ffffff;
-    color: #3f4144;
 }
