--- a/style.css
+++ b/style.css
@@ -2465,6 +2465,8 @@ section {
   width: 100%;
   height: 327px;
   position: relative;
+  padding-left: 5%;
+  margin: 0 0 0 auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -2483,7 +2485,7 @@ section {
 
 .servicepage .top_banner .top_banner_spaceTitle {
   position: absolute;
-  left: 0px;
+  left: 5%;
   top: 35px;
 }
 
@@ -2521,7 +2523,7 @@ section {
 .servicepage .contents {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 0 15px;
+  padding: 0 5%;
   letter-spacing: 0.8px;
   line-height: 22px;
 }
@@ -2711,6 +2713,19 @@ section {
 }
 
 @media screen and (max-width: 767.98px) {
+  .servicepage .top_banner {
+    max-width: 729px;
+    width: 100%;
+    height: 249px;
+    margin: 0 0 0 auto;
+  }
+  .servicepage .top_banner .top_banner_img_pc {
+    display: none;
+  }
+  .servicepage .top_banner .top_banner_img_sp {
+    display: block;
+    width: 100%;
+  }
   .servicepage .tab .nav-tabs .nav-item {
     width: 25%;
   }
@@ -2772,6 +2787,36 @@ section {
 }
 
 @media screen and (max-width: 575.98px) {
+  .servicepage .top_banner {
+    margin-left: 0;
+    margin-bottom: 14px;
+    height: auto;
+  }
+  .servicepage .top_banner .top_banner_img_tb {
+    display: none;
+  }
+  .servicepage .top_banner .top_banner_spaceTitle {
+    left: 15px;
+    top: 30px;
+  }
+  .servicepage .top_banner .top_banner_spaceTitle h2 {
+    font-size: 18px;
+    line-height: 20px;
+    -webkit-writing-mode: horizontal-tb;
+    -ms-writing-mode: lr-tb;
+    writing-mode: horizontal-tb;
+    text-align: left;
+    font-weight: bold;
+  }
+  .servicepage .top_banner .top_banner_spaceTitle h2::before {
+    font-size: 12px;
+    -webkit-writing-mode: horizontal-tb;
+    -ms-writing-mode: lr-tb;
+    writing-mode: horizontal-tb;
+    -webkit-transform: inherit;
+    transform: inherit;
+    text-align: center;
+  }
   .servicepage .contents .tab {
     width: 100vw;
     font-size: 14px;
@@ -2826,12 +2871,6 @@ section {
     margin: 0 auto;
     text-align: justify;
   }
-}
-
-.btn-secondary {
-  border-color: #e8e8e8;
-  background-color: #ffffff;
-  color: #3f4144;
 }
 
 #arrow_top {
