タグのborderを消した

--- a/newspage/_allnews.scss
+++ b/newspage/_allnews.scss
@@ -2,6 +2,13 @@
 
 }
 .allnews{
+    .nav-tabs{
+        margin-bottom: 76px;
+        border-bottom: none;
+        .nav-link{
+            border: none;
+        }
+    }
     .one-post{
         display: flex;
         border-top: 1px solid #f4f4f5;
