--- a/style.css
+++ b/style.css
@@ -2460,6 +2460,15 @@ section {
   }
 }
 
+.allnews .nav-tabs {
+  margin-bottom: 76px;
+  border-bottom: none;
+}
+
+.allnews .nav-tabs .nav-link {
+  border: none;
+}
+
 .allnews .one-post {
   display: -webkit-box;
   display: -ms-flexbox;
