--- a/_arrowtop.scss
+++ b/_arrowtop.scss
@@ -1,7 +1,9 @@
 #arrow_top {
     position: fixed;
-    bottom: 348px;
-    right: 105px;
+    // bottom: 348px;
+    // right: 105px;
+    bottom: 10%;
+    right: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,16 +16,5 @@
         width: 32px;
         height: 32px;
         object-fit: contain;
-    }
-    @media screen and (max-width:991.98px){
-        bottom: 311px;
-        right: 39px;
-    }
-    @media screen and (max-width:768px){
-        bottom: 308px;
-    }
-    @media screen and (max-width:575.98px){
-        bottom: 370px;
-        right: 14px;
     }
 }
